# dante-config

./: .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
src/dante_client/: __init__.py  client.py  discovery.py
src/dante_client/protocol/: __init__.py  arc.py  common.py  settings.py
src/dante_config/: client.py  const.py  discovery.py  exceptions.py  models.py  transport.py
src/dante_config/cli/: __init__.py  __main__.py  main.py
src/dante_config/cli/commands/: channel.py  config.py  device.py  discover.py  subscription.py
src/dante_config/protocol/: arc.py  common.py  settings.py
tests/: conftest.py  test_client.py  test_discovery.py  test_models.py  test_protocol_arc.py  test_protocol_settings.py  test_transport.py
