[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dante-config"
version = "0.1.0"
description = "Async Python library for configuration of Dante audio networking devices"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "zeroconf>=0.80.0",
]
authors = [
    {name = "Jade Auer", email = "jade@jade.wtf"},
]
readme = "README.md"
keywords = ["dante", "audinate", "audio", "networking", "mdns", "asyncio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/jda/dante-config"
Repository = "https://github.com/jda/dante-config"
Issues = "https://github.com/jda/dante-config/issues"

[project.optional-dependencies]
cli = [
    "click>=8.0",
    "asyncclick>=8.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "pylint>=3.0",
    "click>=8.0",
    "asyncclick>=8.0",
]

[project.scripts]
dante = "dante_config.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/dante_config"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["asyncclick.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
